# filedrop

./: flake.nix  pyproject.toml
app/: main.py
app/templates/: index.html
filedrop/: main.py
filedrop/templates/: index.html  upload_success.html
src/: index_template.py  main.py  result
