[project]
name = "filedrop"
version = "0.1.0"
description = "Simple filedrop server"
readme = "README.md"
requires-python = ">=3.8"
# authors = [
#   {email = "hi@pradyunsg.me"},
#   {name = "Tzu-ping Chung"}
# ]
# maintainers = [
#   {name = "Brett Cannon", email = "brett@python.org"}
# ]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

dependencies = [
  "pillow",
  "flask",
  "waitress",
]

# when source dir is not called src, it has to be specified here
# For example: replace main:main with srcfiles.main:main
# This calles the main() function from srcfiles/main.py
[project.scripts]
cli = "main:main"

# [project.entry-points."spam.magical"]
# tomatoes = "spam:main_tomatoes"

